feat: harden spec immutability